Cross browser fixes - working in Firefox & Opera (though it's right aligned for some reason...)

--- a/master.css
+++ b/master.css
@@ -46,6 +46,9 @@ body {
   position: relative; 
   margin: 0 auto;
   -webkit-transition: opacity linear 100ms;
+  -moz-transition: opacity linear 100ms;
+  -o-transition: opacity linear 100ms;
+  transition: opacity linear 100ms;
 }
 
 #control {
@@ -73,7 +76,6 @@ a {
   background-color: transparent;
   height: 40px;
   width: 40px;
-/*  -webkit-border-radius: 4px;*/
 }
 
 #grid > .one {
@@ -213,9 +215,9 @@ a {
 
   background: #242424;
   background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0, rgba(0,0,0,0)), color-stop(0.5, rgba(255,255,255,.05)), color-stop(0.51, rgba(0,0,0,0)), color-stop(1, rgba(0,0,0,0)));
-  border-radius: 20px;
   -moz-border-radius: 20px;
   -webkit-border-radius: 20px;
+  border-radius: 20px;
   margin-right: 10px;
   width: 80px;
   display: inline-block;
@@ -265,7 +267,6 @@ a {
   padding: 0;
   background: #7D0000;
   background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0, #f00), color-stop(1, #7D0000));
-/*  width: 314px;*/
   width: 100%;
   text-shadow: -1px -1px 0px #270000;
   color: rgba(255, 0, 0, 0.2);
@@ -334,6 +335,9 @@ a {
   left: 0;
   z-index: 20;
   -webkit-transition: all 100ms ease-out;
+  -moz-transition: all 100ms ease-out;
+  -o-transition: all 100ms ease-out;
+  transition: all 100ms ease-out;
 }
 
 .highscores #highscores {
@@ -422,18 +426,6 @@ a {
   background: rgba(0, 0, 0, .1);
 }
 
-#toolbar a {
-/*  background: #242424;
-  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0, rgba(0,0,0,0)), color-stop(0.5, rgba(255,255,255,.15)), color-stop(0.51, rgba(0,0,0,0)), color-stop(1, rgba(0,0,0,0)));
-  padding: 0 20px;
-  border: 2px solid #fff;
-  height: 40px;
-  -webkit-box-shadow: 0px 0px 2px #fff;
-  -moz-box-shadow: -5px 0px 10px #1A1A1A, 5px 0px 10px #1A1A1A;
-  -o-box-shadow: -5px 0px 10px #1A1A1A, 5px 0px 10px #1A1A1A;
-  box-shadow: -5px 0px 10px #1A1A1A, 5px 0px 10px #1A1A1A;
-*/}
-
 #start {
   position: absolute;
   right: 5px;
@@ -453,9 +445,15 @@ a {
   height: 22px;
   line-height: 16px;
   max-width: 496px;
+  border: 1px solid #333;
+  border-right-width: 5px;
+  border-left-width: 5px;
   -webkit-user-select: none;
-  -webkit-border-image: url(images/button.png) 0 5 0 5 stretch stretch;
   -webkit-tap-highlight-color: rgba(0,0,0,0); 
+  -webkit-border-image: url(images/button.png) 0 5 0 5 stretch stretch;
+  -moz-border-image: url(images/button.png) 0 5 0 5 stretch stretch;
+  -o-border-image: url(images/button.png) 0 5 0 5 stretch stretch;
+  border-image: url(images/button.png) 0 5 0 5 stretch stretch;
   color: #fff;
   font-family: 'Helvetica Neue', Helvetica;
   font-size: 12px;
@@ -470,6 +468,9 @@ a {
 
 .button.active {
   -webkit-border-image: url(images/buttonPressed.png) 0 5 0 5 stretch stretch;  
+  -moz-border-image: url(images/buttonPressed.png) 0 5 0 5 stretch stretch;  
+  -o-border-image: url(images/buttonPressed.png) 0 5 0 5 stretch stretch;  
+  border-image: url(images/buttonPressed.png) 0 5 0 5 stretch stretch;  
 }
 
 .button img {
